ENV Values do something now

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,15 @@ SECRET=
 ENVIRONMENT=
 
 DB_FILE=
+
+# PayPal
+PAYPAL_CLIENT_ID=
+PAYPAL_SECRET=
+
+# API Client
+API_CLIENT_URL=
+API_CLIENT_KEY=
+API_CLIENT_ENABLED=
+
+# Webserver
+PORT=
